syntax = "proto3";

option go_package = "passeriform.com/nukeship/pb";

import "common.proto";

enum RoomServiceEvent {
    OpponentJoined = 0;
    OpponentReady = 1;
    GameStarted = 2;
    OpponentLeft = 3;
    OpponentRevertedReady = 4;
}

service RoomService {
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse);
    rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse);
    rpc LeaveRoom (LeaveRoomRequest) returns (LeaveRoomResponse);
    rpc UpdateReady (UpdateReadyRequest) returns (UpdateReadyResponse);
    rpc SubscribeMessages (SubscribeMessagesRequest) returns (stream MessageStreamResponse);
}

message SubscribeMessagesRequest { }

message MessageStreamResponse {
    RoomServiceEvent type = 1;
}

message CreateRoomRequest { }

message CreateRoomResponse {
    ResponseStatus status = 1;
    string room_id = 2;
}

message JoinRoomRequest {
    string room_id = 1;
}

message JoinRoomResponse {
    ResponseStatus status = 1;
}

message LeaveRoomRequest { }

message LeaveRoomResponse {
    ResponseStatus status = 1;
}

message UpdateReadyRequest {
    bool ready = 1;
}

message UpdateReadyResponse {
    ResponseStatus status = 1;
}
